[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-draw"
description = "Draw a path with a sequence of turns"
readme = "README.md"
license = {text = "MIT License"}
authors = [
  {email = "piraka@brandeis.edu"},
  {name = "Angus L'Herrou"}
]
version = "1.1.1"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.scripts]
cli-draw = "cli_draw:main"
cli-pipes = "cli_draw.pipes:main"
